# python-lsp-ruff

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: python.yml
pylsp_ruff/: plugin.py  ruff.py  ruff_lint.py  settings.py
tests/: test_code_actions.py  test_ruff_format.py  test_ruff_lint.py
