[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-lsp-ruff"
authors = [
  {name = "Julian Hossbach", email = "julian.hossbach@gmx.de"}
]
version = "1.6.0"
description = "Ruff linting plugin for pylsp"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
  "ruff>=0.1.0, <0.2.0",
  "python-lsp-server",
  "lsprotocol>=2022.0.0a1",
  "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[project.entry-points.pylsp]
ruff = "pylsp_ruff.plugin"

[project.urls]
"Homepage" = "https://github.com/python-lsp/python-lsp-ruff"
"Bug Tracker" = "https://github.com/python-lsp/python-lsp-ruff/issues"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
line-length = 88
